--- a/src/woz-app/App.module.css
+++ b/src/woz-app/App.module.css
@@ -85,3 +85,11 @@
   padding-left: 0;
   padding-right: 0;
 }
+
+.chat_input {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+
