--- a/src/woz/views/ChatInput.module.css
+++ b/src/woz/views/ChatInput.module.css
@@ -1,15 +1,26 @@
 :global(#root) i.enterButton {
   background-color: var(--message-frame)!important;
-}
-
-.entry {
-  flex: 0 0 auto;
-  width: 80%;
+  height: 40px !important;
+  width: 40px !important;
+  font-size: 20px;
 }
 
 .inputField {
-  height: 100px;
+  width: 100%;
+  height: 150px;
+  border-radius: 5px;
+  padding: 5px;
   margin: 10px;
+  border-color: gainsboro;
 }
 
+.inputField:focus{
+  outline: #2185d0;
+  border-color: #2185d0;
+}
 
+.sendButtonGrid{
+  display: grid;
+  height: 100%;
+  grid-template-rows: [row1-start] 35% [row1-end] 20% [third-line] 40% [last-line];
+}
