--- a/src/woz/views/SearchResultModal.module.css
+++ b/src/woz/views/SearchResultModal.module.css
@@ -15,3 +15,9 @@
     font-size: 12px !important;
     width: 100%;
 }
+
+.highlightParagraph{
+    background-color: yellow;
+    border-radius: 5px;
+
+}
