--- a/src/woz/views/ChatTranscript.module.css
+++ b/src/woz/views/ChatTranscript.module.css
@@ -1,4 +1,3 @@
-
 .transcript {
   width: 100%;
   height: 100%;
@@ -65,8 +64,7 @@
   flex: 0 0 auto;
 }
 
-.systemRow:before,
-.systemRow:after {
+.systemRow:before, .systemRow:after {
   background-color: #aaaaaa;
   content: "";
   display: inline-block;
@@ -79,7 +77,6 @@ span.them {
   font-size: smaller;
 }
 
-
 .imageCell {
   color: white;
   padding: 3px;
@@ -88,21 +85,15 @@ span.them {
   display: inline-block;
   height: 156px;
 }
-.imageCellSrc{
+
+.imageCellSrc {
   height: 150px;
   width: 150px;
   border-radius: 1em;
   object-fit: cover;
 }
 
-
 .cellStatusMessage {
-  color: black;
-  padding: 1em;
-  border-radius: 1em;
-  max-width: 100%;
-  background-color: lightblue;
-  text-align: center;
-  font-size: 10px;
-  padding: 2px;
+  padding: 5px !important;
+  text-align: center !important;
 }
