Implemented functionality to log clicked buttons, added cloudbuild file for CD, bug fixes and UX improvements

--- a/src/index.css
+++ b/src/index.css
@@ -47,5 +47,6 @@ html, body, #root {
 }
 
 :root {
-  --message-frame: rgb(156, 81, 0);
+  --main-color: rgba(130,95,255);
+  --message-frame: var(--main-color);
 }
