--- a/src/woz/views/ChatTranscript.module.css
+++ b/src/woz/views/ChatTranscript.module.css
@@ -25,8 +25,8 @@
 
 .cell {
   color: white;
-  padding: 1em;
-  border-radius: 1em;
+  padding: 5px;
+  border-radius: 5px;
   max-width: 70%;
   display: inline-block;
 }
