--- a/src/woz/views/WozHeaderTabs.module.css
+++ b/src/woz/views/WozHeaderTabs.module.css
@@ -5,23 +5,19 @@
 
 .tabInputStyle{
     width: 100%;
-}
-.multiDropdownStyle {
-    width: 100%;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 10px 0 10px 0;
-    border-color: gainsboro;
-  }
-  
-.multiDropdownStyle:focus{
-  outline: #2185d0;
-  border-color: #2185d0;
+    margin-bottom: 10px;
 }
 
-.advancedSearcherAccordion{
-  margin-bottom: 10px !important;
+.textAreaField {
+  width: 100%;
+  height: 100px;
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 5px;
+  border-color: gainsboro;
 }
-.advancedSearcherAccordionContent{
-  padding: 10px !important;
+
+.textAreaField:focus{
+  outline: #2185d0;
+  border-color: #2185d0;
 }
