--- a/src/woz/views/ChatTranscript.module.css
+++ b/src/woz/views/ChatTranscript.module.css
@@ -49,12 +49,24 @@
 
 .ourCell {
   text-align: left;
-  background-color: var(--message-frame);
+  background-color: #ffdebc;
+  color: #000000;
 }
 
 .theirCell {
   text-align: left;
-  background-color: #888888;
+  background-color: #dfc1ff;
+  color: #000000;
+}
+
+/* override link colours inside the agent responses to make them more visible */
+.ourCell a {
+    color: #0000ff;
+}
+
+/* override link colours inside the agent responses to make them more visible */
+.theirCell a {
+    color: #0000ff;
 }
 
 .systemCell {
