--- a/src/woz-app/App.module.css
+++ b/src/woz-app/App.module.css
@@ -86,10 +86,28 @@
   padding-right: 0;
 }
 
+.flex_container {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+}
+
 .chat_input {
   height: 100%;
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
+  flex-grow: 1;
+}
+
+.info_box {
+    height: 40%;
+    overflow-y: scroll;
+    padding: 10px;
+    margin-bottom: 5px;
+    border-right: 2px;
+    border-bottom: 2px;
+    border-color: #aaa;
+    border-style: solid;
 }
 
