--- a/src/woz/views/ChatTranscript.module.css
+++ b/src/woz/views/ChatTranscript.module.css
@@ -59,13 +59,22 @@
   color: #000000;
 }
 
-/* override link colours inside the agent responses to make them more visible */
+.systemRoleCell {
+  text-align: left;
+  background-color: #c3ff8f;
+  color: #000000;
+}
+
+/* override link colours to make them more visible */
 .ourCell a {
     color: #0000ff;
 }
 
-/* override link colours inside the agent responses to make them more visible */
 .theirCell a {
+    color: #0000ff;
+}
+
+.systemRoleCell a {
     color: #0000ff;
 }
 
